# Banking-Fraud-Prevention-System-Automation

./: README.md
automacao-bancaria-tcc/: README.md  dashboard.py  main.py  pyproject.toml  requirements.txt
automacao-bancaria-tcc/data/database/: bankflow.sqlite
automacao-bancaria-tcc/data/input/: contas.csv  transacoes.csv
automacao-bancaria-tcc/data/output/: amostra_auditoria.csv  indicadores.json  relatorio_auditoria.html  transacoes_processadas.csv
automacao-bancaria-tcc/docs/: arquitetura.md  proposta-tcc.md  roteiro-apresentacao.md
automacao-bancaria-tcc/src/bankflow/: __init__.py  api.py  cli.py  config.py  data_generator.py  database.py  models.py  pipeline.py  risk.py  sampling.py  services.py
automacao-bancaria-tcc/tests/: test_api.py  test_database.py  test_pipeline_services.py  test_sampling.py
